package core;

import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
import jakarta.persistence.Entity;
import jakarta.persistence.FetchType;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.Id;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.JoinTable;
import jakarta.persistence.ManyToMany;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.Table;
import java.util.Collections;
import java.util.HashSet;
import java.util.Set;

// This JavaDoc comment was generated by Github Copilot
/**
 * Represents a post entity. This class is mapped to the "posts" table in the
 * database.
 */
@Entity
@Table(name = "posts")
public class Post {

  public static final int MAX_CONTENT_LENGTH = 280;

  @Id
  @GeneratedValue
  private Long id;

  @ManyToOne
  @JoinColumn(name = "author_id", referencedColumnName = "id", nullable = false)
  private User author;
  private String content;
  // private Instant createdAt;

  private int likes = 0;
  private int reTweets = 0;
  private int commentsAmount = 0;

  @ManyToMany(fetch = FetchType.EAGER)
  @JoinTable(name = "post_likes", joinColumns = @JoinColumn(name = "post_id"), inverseJoinColumns = @JoinColumn(name = "user_id"))
  private Set<User> likedByUsers = new HashSet<>();

  // This JavaDoc comment was generated by Github Copilot
  /**
   * Creates a Post with the given author, content, and ID.
   *
   * @param user    the post author (not null)
   * @param content the post content (not null, max {@link #MAX_CONTENT_LENGTH})
   * @param id      the post ID
   * @throws IllegalArgumentException if user/content is invalid
   */
  @SuppressFBWarnings(value = "CT_CONSTRUCTOR_THROW")
  public Post(User user, String content, Long id) {
    setAuthor(user);
    setContent(content);
    setId(id);
    // this.createdAt = Instant.now();
  }

  /**
   * Default constructor for the Post class.
   */
  public Post() {
  }

  // /** Likes/unlikes the post by the @param user */
  // public void updateLikes(User user) {
  // if (likedByUsers.contains(user)) {
  // likedByUsers.remove(user);
  // } else {
  // likedByUsers.add(user);
  // }
  // likes = likedByUsers.size();
  // }

  /** @return true if the @param user has liked the post */
  public boolean likedByUser(User user) {
    return likedByUsers.contains(user);
  }

  public String getContent() {
    return content;
  }

  public int getLikes() {
    return likes;
  }

  public int getCommentsAmount() {
    return commentsAmount;
  }

  // public Instant getCreatedAt() {
  // return createdAt;
  // }

  public static int getMaxContentLength() {
    return MAX_CONTENT_LENGTH;
  }

  @SuppressFBWarnings(value = "EI_EXPOSE_REP")
  public User getAuthor() {
    return author;
  }

  public int getReTweets() {
    return reTweets;
  }

  public Long getId() {
    return id;
  }

  // @SuppressFBWarnings(value = "EI_EXPOSE_REP", justification = "Necessary for
  // lazy loading and ORM operations")
  public Set<User> getLikedByUsers() {
    return Collections.unmodifiableSet(likedByUsers);
    // return likedByUsers;
  }

  // This JavaDoc comment was generated by Github Copilot
  /**
   * Sets the content of the post.
   *
   * @param content the content to set, must not be null, empty, or exceed
   *                {@link #MAX_CONTENT_LENGTH}
   * @throws IllegalArgumentException if the content is null, empty, or too long
   */
  public void setContent(String content) {
    if (content == null) {
      throw new IllegalArgumentException("Content cannot be null");
    }
    if (content.isEmpty()) {
      throw new IllegalArgumentException("Content can not be empty");
    }
    if (content.length() > MAX_CONTENT_LENGTH) {
      throw new IllegalArgumentException("Content is too long");
    }
    this.content = content;
  }

  public void setCommentsAmount(int commentsAmount) {
    this.commentsAmount = commentsAmount;
  }

  // public void setCreatedAt(Instant createdAt) {
  // this.createdAt = createdAt;
  // }

  public void setId(Long id) {
    this.id = id;
  }

  public void setLikes(int likes) {
    this.likes = likes;
  }

  // This JavaDoc comment was generated by Github Copilot
  /**
   * Sets the author of the post.
   *
   * @param author the author to set, must not be null
   * @throws IllegalArgumentException if the author is null
   */
  @SuppressFBWarnings(value = "EI_EXPOSE_REP2")
  public void setAuthor(User author) {
    if (author == null) {
      throw new IllegalArgumentException("User cannot be null");
    }
    this.author = author;
  }

  public void setReTweets(int reTweets) {
    this.reTweets = reTweets;
  }

  public void setLikedByUsers(Set<User> likedByUsers) {
    this.likedByUsers = new HashSet<>(likedByUsers);
  }

}
