package persistence;

import java.util.HashSet;
import java.util.List;
import java.util.Optional;
import java.util.Set;

import core.Post;
import core.User;
import persistence.hibernate.HibernateRepository;

// This JavaDoc comment was generated by Github Copilot
/**
 * The OrmPostRepository class provides an implementation of the PostRepository
 * interface using Hibernate for database operations.
 */
public class OrmPostRepository extends HibernateRepository implements PostRepository {
  @Override
  public void deleteById(Long id) {
    sessionFactory.inTransaction(session -> {
      Post post = session.find(Post.class, id);
      if (post != null) {
        session.remove(post);
      }
    });
  }

  @Override
  public boolean existsById(Long id) {
    return sessionFactory.fromTransaction(session -> {
      return session.find(Post.class, id) != null;
    });
  }

  @Override
  public List<Post> findAll() {
    return sessionFactory.fromTransaction(session -> {
      return session.createSelectionQuery("from Post", Post.class).getResultList();
    });
  }

  @Override
  public Optional<Post> findById(Long id) {
    return sessionFactory.fromTransaction(session -> {
      Post post = session.find(Post.class, id);
      return Optional.ofNullable(post);
    });
  }

  @Override
  public Post save(Post post) {
    sessionFactory.inTransaction(session -> {
      session.persist(post);
    });
    return post;
  }

  @Override
  public Post update(Post post) {
    return sessionFactory.fromTransaction(session -> {
      Post managedPost = session.find(Post.class, post.getId());
      if (managedPost != null) {
        managedPost.setContent(post.getContent());

        // Sync liked users properly
        managedPost.setLikedByUsers(post.getLikedByUsers());
        managedPost.setLikes(post.getLikes());
      }
      return managedPost;
    });
  }

  @Override
  public void likePost(Post post, User user) {
    sessionFactory.inTransaction(session -> {
      HashSet<User> likedByUsers = new HashSet<>(post.getLikedByUsers());
      if (likedByUsers.contains(user)) {
        likedByUsers.remove(user);
      } else {
        likedByUsers.add(user);
      }
      post.setLikedByUsers(likedByUsers);
      post.setLikes(likedByUsers.size());
      session.merge(post);
    });
  }
  // @Override
  // public void likePost(Post post, User user) {
  // if (post == null || post.getId() == null) {
  // throw new IllegalArgumentException("Post must have a non-null id");
  // }
  // if (user == null || user.getId() == null) {
  // throw new IllegalArgumentException("User must have a non-null id");
  // }

  // sessionFactory.inTransaction(session -> {
  // Long pid = post.getId();
  // Long uid = user.getId();

  // // Fetch the post and its likedByUsers in one query
  // Post managedPost = session.createQuery(
  // "select distinct p from Post p " + "left join fetch p.likedByUsers " + "where
  // p.id = :id",
  // Post.class).setParameter("id", pid).uniqueResult();

  // if (managedPost == null) {
  // throw new IllegalArgumentException("Post not found: " + pid);
  // }

  // User managedUser = session.find(User.class, uid);
  // if (managedUser == null) {
  // throw new IllegalArgumentException("User not found: " + uid);
  // }

  // Set<User> likedSet = new HashSet<>(managedPost.getLikedByUsers());
  // if (likedSet.remove(managedUser)) {
  // } else {
  // likedSet.add(managedUser);
  // }

  // managedPost.setLikedByUsers(likedSet);
  // managedPost.setLikes(likedSet.size());
  // });
  // }

}
