package persistence;

import core.User;
import java.util.List;
import java.util.Optional;
import persistence.hibernate.HibernateRepository;

// This JavaDoc comment was generated by Github Copilot
/**
 * The OrmUserRepository class provides an implementation of the UserRepository
 * interface using Hibernate for persistence operations.
 */
public class OrmUserRepository extends HibernateRepository implements UserRepository {
  @Override
  public void deleteById(Long id) {
    sessionFactory.inTransaction(session -> {
      User user = session.find(User.class, id);
      if (user != null) {
        session.remove(user);
      }
    });
  }

  @Override
  public boolean existsById(Long id) {
    return sessionFactory.fromTransaction(session -> {
      return session.find(User.class, id) != null;
    });
  }

  // createSelectionQuery usage inspired by Hibernate Getting Started guide
  // See: http://docs.jboss.org/hibernate/orm/7.1/quickstart/html_single/
  // Start createSelectionQuery usage
  @Override
  public List<User> findAll() {
    return sessionFactory.fromTransaction(session -> {
      return session.createSelectionQuery("from User", User.class).getResultList();
    });
  }

  @Override
  public Optional<User> findById(Long id) {
    return sessionFactory.fromTransaction(session -> {
      User user = session.find(User.class, id);
      return Optional.ofNullable(user);
    });
  }

  @Override
  public Optional<User> findByUsername(String username) {
    return sessionFactory.fromTransaction(session -> {
      User user = session.createSelectionQuery("where username = :username", User.class)
          .setParameter("username", username).getSingleResultOrNull();
      return Optional.ofNullable(user);
    });
  }
  // End createSelectionQuery usage

  @Override
  public User save(User user) {
    sessionFactory.inTransaction(session -> {
      session.persist(user);
    });
    return user;
  }

  @Override
  public User update(User user) {
    sessionFactory.inTransaction(session -> {
      session.merge(user);
    });
    return user;
  }
}
