package persistence;

import core.Post;
import core.User;
import java.util.List;
import java.util.Optional;

// The JavaDoc comments in this file were generated by Github Copilot
/** Repository for managing Post entities. */
public interface PostRepository {

  /** Finds a post by ID. */
  Optional<Post> findById(Long id);

  /** Returns all posts. */
  List<Post> findAll();

  /** Saves a new post. */
  Post save(Post post);

  /** Updates an existing post. */
  Post update(Post post);

  /** Deletes a post by ID. */
  void deleteById(Long id);

  /** Checks if a post exists by ID. */
  boolean existsById(Long id);

  /** Likes/unlikes the @param post by the @param user */
  void likePost(Post post, User user);
}
