package persistence;

import core.User;
import java.util.List;
import java.util.Optional;

// The JavaDoc comments in this file were generated by Github Copilot
/** Repository for managing User entities. */
public interface UserRepository {

  /** Finds a user by ID. */
  Optional<User> findById(Long id);

  /** Returns all users. */
  List<User> findAll();

  /** Saves a new user. */
  User save(User user);

  /** Updates an existing user. */
  User update(User user);

  /** Deletes a user by ID. */
  void deleteById(Long id);

  /** Checks if a user exists by ID. */
  boolean existsById(Long id);

  /** Finds a user by username. */
  Optional<User> findByUsername(String username);
}
