package persistence.hibernate;

import core.Post;
import core.User;
import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
import org.hibernate.SessionFactory;
import org.hibernate.boot.MetadataSources;
import org.hibernate.boot.registry.StandardServiceRegistry;
import org.hibernate.boot.registry.StandardServiceRegistryBuilder;

// Heavily inspired by Hibernate's Getting Started tutorial
// The SessionFactory is instantiated in the same way in our project
// See: https://docs.jboss.org/hibernate/orm/7.1/quickstart/html_single/

// This JavaDoc comment was generated by Github Copilot
/**
 * Provides a Hibernate SessionFactory and utility methods for database
 * management.
 */
public class HibernateRepository {
  protected SessionFactory sessionFactory;

  // This JavaDoc comment was generated by Github Copilot
  /**
   * Initializes the SessionFactory with User and Post annotated classes.
   *
   * @throws RuntimeException if SessionFactory creation fails
   */
  @SuppressFBWarnings(value = "CT_CONSTRUCTOR_THROW")
  protected HibernateRepository() {
    final StandardServiceRegistry registry = new StandardServiceRegistryBuilder().build();
    try {
      sessionFactory = new MetadataSources(registry).addAnnotatedClasses(User.class, Post.class)
          .buildMetadata().buildSessionFactory();
    } catch (Exception e) {
      StandardServiceRegistryBuilder.destroy(registry);
      throw new RuntimeException("Failed to create SessionFactory", e);
    }
  }

  // This JavaDoc comment was generated by Github Copilot
  /** Closes the SessionFactory and releases Hibernate resources. */
  protected void tearDown() {
    if (sessionFactory != null) {
      sessionFactory.close();
    }
  }

  /** Deletes all entries from all tables. */
  public void dropDatabase() {
    sessionFactory.inTransaction(session -> {
      session.createMutationQuery("DELETE FROM Post").executeUpdate();
      session.createMutationQuery("DELETE FROM User").executeUpdate();
    });
  }
}
