package service;

import core.Post;
import core.User;
import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
import java.util.List;
import java.util.Optional;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;
import persistence.PostRepository;

// This JavaDoc comment was generated by Github Copilot
/**
 * Service for managing Post entities. Provides methods to retrieve and create
 * posts.
 */
@Service
public class PostService {
  private PostRepository postRepository;

  // This JavaDoc comment was generated by Github Copilot
  /**
   * Constructs the service with a PostRepository.
   *
   * @param postRepository the repository to use
   */
  @Autowired
  @SuppressFBWarnings(value = "EI_EXPOSE_REP2", justification = "We need to inject "
      + "the PostRepository service")
  public PostService(PostRepository postRepository) {
    this.postRepository = postRepository;
  }

  /**
   * Retrieves a post by its ID.
   *
   * @param id the Id of the post to retrieve.
   * @return an {@link Optional} containing the post if found, else empty.
   */
  @Transactional(readOnly = true)
  public Optional<Post> getPostById(Long id) {
    return this.postRepository.findById(id);
  }

  // This JavaDoc comment was generated by Github Copilot
  /**
   * Creates a new post.
   *
   * @param post the post to create
   * @return the saved post
   */
  @Transactional
  public Post createPost(Post post) {
    if (post == null) {
      throw new IllegalArgumentException("Post cannot be null");
    }

    // Make sure we don't overwrite an existing post
    if (post.getId() != null) {
      boolean postExists = this.postRepository.findById(post.getId()).isPresent();
      if (postExists) {
        throw new IllegalArgumentException("Post with id \"" + post.getId() + "\" already exists");
      }
    }

    return this.postRepository.save(post);
  }

  @Transactional(readOnly = true)
  public List<Post> getAllPosts() {
    return this.postRepository.findAll();
  }

  @Transactional
  public void likePost(Post post, User user) {
    this.postRepository.likePost(post, user);
  }

  public Post update(Post post) {
    return postRepository.update(post);
  }

  // public Post removeLike(Post currentPost, User loggedInUser) {
  // return postRepository.removeLike();
  // }
}
