package service;

import core.User;
import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
import java.util.Optional;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;
import persistence.UserRepository;

// This JavaDoc comment was generated by Github Copilot
/**
 * Service for managing User entities. Handles login, retrieval, and creation of
 * users.
 */
@Service
public class UserService {
  private final UserRepository userRepository;
  private User loggedInUser;

  // This JavaDoc comment was generated by Github Copilot
  /**
   * Constructs the service with a UserRepository.
   *
   * @param userRepository the repository to use
   */
  @Autowired
  @SuppressFBWarnings(value = "EI_EXPOSE_REP2", justification = "We need to inject "
      + "the UserRepository service")
  public UserService(UserRepository userRepository) {
    this.userRepository = userRepository;
  }

  // This JavaDoc comment was generated by Github Copilot
  /** Returns the currently logged-in user, if any. */
  @SuppressFBWarnings(value = "EI_EXPOSE_REP")
  @Transactional(readOnly = true)
  public User getLoggedInUser() {
    return loggedInUser;
  }

  private void setLoggedInUser(User loggedInUser) {
    this.loggedInUser = loggedInUser;
  }

  // This JavaDoc comment was generated by Github Copilot
  /**
   * Logs in a user by username and password. Creates a new user if none exists
   * with the given username.
   *
   * @param username the username
   * @param password the password
   * @return true if login succeeded
   */
  public boolean logIn(String username, String password) {
    Optional<User> maybeUser = getUserByUsername(username);

    if (maybeUser.isPresent()) {
      User user = maybeUser.get();
      if (user.getPassword().equals(password)) {
        setLoggedInUser(user);
        return true;
      }
      return false;
    }
    // New user gets to log in
    User newUser = new User(null, username, username, password); // make new user, repo handles ID
    createUser(newUser);
    setLoggedInUser(newUser);
    return true;
  }

  // This JavaDoc comment was generated by Github Copilot
  /** Finds a user by username. */
  @Transactional(readOnly = true)
  public Optional<User> getUserByUsername(String username) {
    return userRepository.findByUsername(username);
  }

  // This JavaDoc comment was generated by Github Copilot
  /**
   * Creates a new user. Fails if username already exists.
   *
   * @param user the user to create
   * @return the saved user
   */
  @Transactional
  public User createUser(User user) {
    boolean userExists = this.userRepository.findByUsername(user.getUsername()).isPresent();
    if (userExists) {
      throw new IllegalArgumentException("Username \"" + user.getUsername() + "\" already exists");
    }

    return this.userRepository.save(user);
  }
}
