package ui;

import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
import java.io.IOException;
import javafx.fxml.FXML;
import javafx.scene.control.Button;
import javafx.scene.control.Label;
import javafx.scene.control.TextField;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Component;
import service.UserService;

// This JavaDoc comment was generated by Github Copilot
/**
 * Controller for the login view. Handles user login and navigation to the feed.
 */
@Component
public class LoginController {
  UserService userService;

  // This JavaDoc comment was generated by Github Copilot
  /**
   * Constructs the controller with a UserService.
   *
   * @param userService the user service
   */
  @Autowired
  @SuppressFBWarnings(value = "EI_EXPOSE_REP2", justification = "We need to inject "
      + "the UserRepository service.")
  public LoginController(UserService userService) {
    this.userService = userService;
  }

  @FXML
  private TextField usernameField;

  @FXML
  private TextField passwordField;

  @FXML
  @SuppressWarnings("unused")
  private Button logInBtn;

  @FXML
  private Label errorLabel;

  // This JavaDoc comment was generated by Github Copilot
  /** Logs in the user and switches to feed if successful. */
  @FXML
  @SuppressWarnings("unused")
  private void logIn() throws IOException {
    // clear any errors
    errorLabel.setText("");

    // Save input to variables
    String username = usernameField.getText();
    String password = passwordField.getText();

    if (userService.logIn(username, password)) {
      App.setRoot("feed.fxml");
    } else {
      errorLabel.setText("Incorrect password");
    }
  }

  @FXML
  @SuppressWarnings("unused")
  private void switchToFeed() throws IOException {
    App.setRoot("feed.fxml");
  }
}
