package ui;

import core.Post;
import core.User;
import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
import java.io.IOException;
import java.net.URL;
import java.util.ResourceBundle;
import javafx.beans.binding.Bindings;
import javafx.fxml.FXML;
import javafx.fxml.Initializable;
import javafx.scene.control.Button;
import javafx.scene.control.Label;
import javafx.scene.control.TextArea;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Component;
import service.PostService;
import service.UserService;

// This JavaDoc comment was generated by Github Copilot
/**
 * Controller for creating new posts. Handles text input, validation, and
 * publishing.
 */
@Component
public class MakeNewPostController implements Initializable {
  private final PostService postService;
  private final UserService userService;

  // This JavaDoc comment was generated by Github Copilot
  /** Constructs the controller with required services. */
  @Autowired
  @SuppressFBWarnings(value = "EI_EXPOSE_REP2", justification = "We need to inject the "
      + "userService and postService.")
  public MakeNewPostController(PostService postService, UserService userService) {
    this.postService = postService;
    this.userService = userService;
  }

  @FXML
  private TextArea postText;

  @FXML
  private Button publishBtn;

  @FXML
  private Button backBtn;

  @FXML
  private Label charCount;

  // This method is generated by openAI GPT-5
  // This JavaDoc comment was generated by Github Copilot
  /**
   * Initializes the UI, disables publish button if invalid, shows live character
   * count.
   */
  @Override
  public void initialize(URL url, ResourceBundle rb) {
    // disable + dim button when invalid
    var tooLong = postText.textProperty().length().greaterThan(Post.MAX_CONTENT_LENGTH);
    var blank = Bindings.createBooleanBinding(
        () -> postText.getText() == null || postText.getText().isBlank(), postText.textProperty());

    publishBtn.disableProperty().bind(blank.or(tooLong));
    publishBtn.opacityProperty()
        .bind(Bindings.when(publishBtn.disableProperty()).then(0.5).otherwise(1.0));

    // live counter
    charCount.textProperty()
        .bind(Bindings.format("%d/%d", postText.textProperty().length(), Post.MAX_CONTENT_LENGTH));

    // turn counter red + add red border when too long
    postText.textProperty().addListener((obs, ov, nv) -> {
      boolean over = nv != null && nv.length() > Post.MAX_CONTENT_LENGTH;
      charCount.setStyle(over ? "-fx-text-fill: #d32f2f;" : "");
      postText.setStyle(over
          ? "-fx-background-insets: 0; -fx-background-color: white; -fx-border-color: #d32f2f; "
              + "-fx-border-width: 1; -fx-border-radius: 4;"
          : "");
    });
  }

  // Method below is generated by openAI GPT-5 model. However, it is altered to
  // use our classes

  // This JavaDoc comment was generated by Github Copilot
  /** Publishes a new post if content is valid. */
  @FXML
  @SuppressWarnings("unused")
  private void publishPost() throws IOException {
    String content = postText.getText();

    if (content == null || content.isBlank()) {
      System.out.println("Content cannot be empty");
      return;
    }

    if (content.length() > Post.MAX_CONTENT_LENGTH) {
      System.out.println("Content too long (" + content.length() + ")");
      return;
    }

    User user = userService.getLoggedInUser();
    Post post = new Post(user, content, null);

    postService.createPost(post);

    switchToFeed();
  }

  @FXML
  @SuppressWarnings("unused")
  private void switchToFeed() throws IOException {
    App.setRoot("feed.fxml");
  }
}
