package ui;

import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.context.annotation.Scope;
import org.springframework.stereotype.Component;

import core.Post;
import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
import javafx.fxml.FXML;
import javafx.scene.control.Button;
import javafx.scene.control.Label;
import service.PostService;
import service.UserService;

// This JavaDoc comment was generated by Github Copilot
/**
 * Controller for individual post UI component. Binds Post data to the post.fxml
 * labels.
 */
@Component
@Scope("prototype") // Tells springboot to create individual PostController class for posts
public class PostController {
  private final PostService postService;
  private final UserService userService;

  @Autowired
  @SuppressFBWarnings(value = "EI_EXPOSE_REP2", justification = "We need to inject the "
      + "userService and postService.")
  public PostController(PostService postService, UserService userService) {
    this.postService = postService;
    this.userService = userService;
  }

  @FXML
  private Label displayNameLabel;
  @FXML
  private Label usernameLabel;
  @FXML
  private Label contentLabel;
  @FXML
  private Button likeBtn;
  @FXML
  private Button retweetBtn;

  private Post currentPost;

  @SuppressFBWarnings(value = "EI_EXPOSE_REP2", justification = "The Post is used in a tightly scoped controller context where mutation is safe and intentional.")
  @FXML
  // This JavaDoc comment was generated by Github Copilot
  /** Sets the Post data to the UI labels. */
  public void setData(Post post) {
    this.currentPost = post;

    displayNameLabel.setText(post.getAuthor().getDisplayName());
    usernameLabel.setText("@" + post.getAuthor().getUsername());
    contentLabel.setText(post.getContent());
    likeBtn.setText(post.getLikes() + " 👍");
    retweetBtn.setText(post.getReTweets() + " 🔄");

    if (post.likedByUser(userService.getLoggedInUser())) {
      likeBtn.setStyle("-fx-text-fill: blue;");
    }
    // updateLikes();
    // if (post.reTweetedByUser(userService.getLoggedInUser()))
    // retweetBtn.setStyle("-fx-text-fill: cyan;");
  }

  @FXML
  public void updateLikes() {
    if (currentPost != null) {
      postService.likePost(currentPost, userService.getLoggedInUser());
      postService.update(currentPost);
      likeBtn.setText(currentPost.getLikes() + " 👍");

      if (currentPost.likedByUser(userService.getLoggedInUser())) {
        likeBtn.setStyle("-fx-text-fill: blue;");
      } else {
        likeBtn.setStyle("-fx-text-fill: black;");
      }
    }
  }

  @FXML
  public void updateRetweets() { // do not remove, posts wont show

  }
}
